# users-service

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build.sh  build_network.sh  coverage.xml  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: python-app-test.yml  test_action.yml
tests/: app_test.py  test_config.py  user_controller_test.py
users_service/: app.py  main.py
users_service/controllers/: user_controller.py
users_service/database/: crud.py  database.py  exceptions.py  models.py  schema.py  user_repository.py
users_service/utils/: authorization_handler.py  events_generator.py  events_handler.py  events_mockup.py  firebase_config.json  firebase_handler.py  firebase_implementation.py  firebase_keys.json  firebase_mock.py  token_handler.py  wallet.py  wallet_handler.py  wallet_mockup.py
