[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["alejovillores <avillores@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "users_service"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.21.0"
firebase-admin = "^5.4.0"
JSON-log-formatter = "^0.5.1"
logging = "^0.4.9.6"
jsonschema = "^4.16.0"
datadog-api-client = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
black = "^22.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

